--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
         <div class = "skill">
 
-            <img src="images/flutter.png" class = "logos" alt="">
+            <img src="images/Flutter.png" class = "logos" alt="">
             <p>Flutter</p>
         </div>
 
