--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <h1>Education</h1> <br>
 
-        <img src="images/profile_pic.jpg" class = "profile_pic" alt="">
+        <img src="images/profile_pic.jpg" class = "profile_pic right_align" alt="">
 
         <ul>
 
@@ -141,7 +141,7 @@
 
         <h1>Projects</h1>
 
-        <img src="images/profile_pic.jpg" class = "profile_pic" alt="">
+        <img src="images/profile_pic.jpg" class = "profile_pic right_align" alt="">
 
         <ul>
 
@@ -171,7 +171,7 @@
 
         <h1>Certifications</h1>
 
-        <img src="images/profile_pic.jpg" class = "profile_pic" alt="">
+        <img src="images/profile_pic.jpg" class = "profile_pic right_align" alt="">
 
         <ul>
 
